nginx/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-grpc-server
  name: go-grpc-server
spec:
  ports:
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: go-grpc-server
  type: ClusterIP
